# NeuralNetworkApproximation

./: README.md  pyproject.toml  requirements.txt
nnapprox/: __init__.py  _version.py  core.py
nnfunction/: __init__.py  core.py
notebooks/: example_pytorch.ipynb  flax.ipynb  jax.ipynb  pytorch_random-samples.ipynb  pytorch_std-example.ipynb
